# openRouteFinder

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Demo.py  LICENSE  README.md  RouteFinderLib.py  config.py  findings.md  index.html  manage.py  metarKeeper.py  packData.py  package.json  progress.md  progressbar.py  pyproject.toml  requirements.txt  routefinder.py  start.bash  start.bat  task_plan.md  validcode.py  webFinder.py
OpenRouterFinder/: __init__.py
airwayroutefinder/: asgi.py  settings.py  urls.py  wsgi.py
backend/: main.py
backend/core/: data_loader.py
docs/claude/: api-endpoints.md  backend.md  data-formats.md  frontend.md  sid-star.md  testing.md
frontend/: .gitignore  package.json
frontend/src/: main.ts
frontend/src/components/: AirportInfo.vue  RouteMap.vue  SearchForm.vue  WeatherCard.vue
frontend/src/composables/: useMap.ts
frontend/src/stores/: routeStore.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue
openRouterFinder/: api.py  app.py  config.py
openRouterFinder/core/: __init__.py  _compat.py  admin.py  airport.py  data_loader.py  dijkstra.py  graph.py
openRouterFinder/core/storage/: NavData.fbs  builder.py  reader.py  registry.py
openRouterFinder/core/storage/NavData/: Airport.py  AirportComm.py  AirwayLevel.py  Edge.py  GLS.py  GridMora.py  Holding.py  ILS.py  Marker.py  NavData.py  Navaid.py  Node.py  ProcLeg.py  ProcTransition.py  Procedure.py  ProcedureType.py  Runway.py  RunwayEnd.py
openRouterFinder/scripts/: __init__.py  demo.py  pack_data.py
openRouterFinder/utils/: metar.py  metar_parser.py  validcode.py
routefinder/: apps.py  config.py  models.py  validcode.py  views.py
src/: AirportProcedure.cpp  AirportProcedure.h  NavDataReader.cpp  NavDataReader.h  NavaidCompare.cpp  NavaidCompare.h  NavaidInformation.cpp  NavaidInformation.h  RouteFinder.cpp  RouteFinder.h  RouteResult.cpp  RouteResult.h  main.cpp
static/: index.html  newindex.html
template/: index (2).html  index.html
tests/: test_airport.py  test_api.py  test_data_loader.py  test_dijkstra.py  test_graph.py  test_integration_routes.py  test_procedure_integrity.py  test_storage_builder.py  test_storage_reader.py  test_storage_registry.py  test_vector_fallback.py
tests/e2e/: conftest.py  test_connectivity_e2e.py  test_perf_e2e.py  test_procedures_e2e.py  test_routes_e2e.py
tests/navdata/: Readme.txt  cycle.json  cycle_info.txt
tests/unit/: test_airport_unit.py  test_build_pipeline.py  test_data_loader.py  test_metar.py  test_metar_parser.py  test_procedure_integrity.py  test_validcode.py  test_vector_fallback.py
webFinder/: .gitignore  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
webFinder/.superpowers/brainstorm/143887-1779008346/content/: waiting-40.html  waiting-50.html  waiting-60.html  waiting-70.html  waiting-80.html  waiting-81.html  waiting-9.html  waiting.html
webFinder/.superpowers/brainstorm/143887-1779008346/state/: server-stopped
webFinder/public/: manifest.json
webFinder/src/: App.vue  main.ts  style.css
webFinder/src/components/: AirportAutocomplete.vue  AirportInfo.vue  AirportSection.vue  BentoCell.vue  CaptchaModal.vue  ProcedureSelector.vue  RouteHero.vue  RouteMap.vue  RouteResult.vue  SIDSelector.vue  STARSelector.vue  SearchForm.vue  WeatherCard.vue  WeatherSection.vue
webFinder/src/composables/: useAdmin.ts  useAirportSearch.ts  useClipboard.ts  useCycles.ts  useLocale.ts  useMap.ts  useNavData.ts  useRouteQuery.ts  useTheme.ts
webFinder/src/i18n/: index.ts
webFinder/src/i18n/locales/: en.ts  zh.ts
webFinder/src/stores/: routeStore.ts
webFinder/src/types/: index.ts
webFinder/src/views/: AdminView.vue  HomeView.vue
